Resolve the unwanted blocking by ad blocker and refactor the testimonial section. (#1)
* chore: remove unnecessary logs

* fix: remove the unwanted margin top from title

* refactor: add error message, loading ui and update end point to fetch reviews

--- a/front-end/src/pages/Home/Sections/Testimonials/Testimonials.module.css
+++ b/front-end/src/pages/Home/Sections/Testimonials/Testimonials.module.css
@@ -96,6 +96,13 @@
   pointer-events: none;
 }
 
+.skeletonLoader {
+  max-width: calc(100vw - 40px);
+  overflow: hidden;
+  display: flex;
+  gap: 16px;
+}
+
 /* Extra Large Devices (large desktops) - 1200px and above: */
 @media (min-width: 1200px) and (max-width: 1400px) {
   .container {
